--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -50,7 +50,7 @@
       display: block;
     }
     p {
-      margin: 1em 0;
+      margin: 0!important;
     }
     table td {
       border-collapse: collapse;
